--- a/rasa/requirements.txt
+++ b/rasa/requirements.txt
@@ -57,7 +57,7 @@ huggingface-hub==0.35.0
 humanfriendly==10.0
 idna==3.10
 jax==0.4.30
-jaxlib==0.4.30
+jaxlib>=0.4.30
 Jinja2==3.1.6
 jmespath==1.0.1
 joblib==1.5.2
@@ -174,3 +174,4 @@ Werkzeug==3.1.3
 wrapt==1.14.2
 wsproto==1.2.0
 yarl==1.20.1
+
