--- a/rasa/requirements.txt
+++ b/rasa/requirements.txt
@@ -1,3 +1,5 @@
+setuptools>=65.0.0
+wheel
 absl-py==1.4.0
 aio-pika==8.2.3
 aiofiles==24.1.0
@@ -174,4 +176,5 @@ Werkzeug==3.1.3
 wrapt==1.14.2
 wsproto==1.2.0
 yarl==1.20.1
+
 
